# links

./: LICENSE.md  Makefile  README.md
backend/: Cargo.toml  Makefile
backend/migrations/: 20240429000036_load_fixtures.sql
backend/src/: lib.rs  store.rs  topics.rs  types.rs  user.rs  users.rs
backend/src/store/: topics.rs  users.rs
backend/tests/: store.rs  store_tests.rs
client/: .eslintrc.cjs  Makefile  next.config.js  package.json  theme.ts
client/app/: layout.tsx  store.ts
client/app/[slug]/: page.tsx
client/app/[slug]/search/: page.tsx
client/app/[slug]/topics/: page.tsx
client/app/[slug]/topics/[id]/: page.tsx
client/app/[slug]/topics/new/: page.module.css  page.tsx
client/app/[slug]/users/: page.module.css  page.tsx
client/app/[slug]/users/new/: page.tsx
client/app/[slug]/workspaces/: page.tsx
client/app/change-account/: page.tsx
client/app/home/: page.tsx
client/app/login/: page.tsx
client/app/topics/: page.module.css  page.tsx
client/app/topics/[id]/: page.tsx
client/app/topics/new/: page.tsx
client/app/users/: page.module.css  page.tsx
client/app/users/[id]/: page.tsx
client/app/users/new/: page.tsx
client/components/Page/: index.module.css  index.tsx
client/components/Welcome/: index.test.tsx  index.tsx
client/lib/: index.ts
client/src/app/: CurrentUser.tsx  layout.tsx  page.tsx  store.ts
client/src/app/topics/: page.tsx
client/src/app/topics/[id]/: page.tsx
client/src/app/topics/new/: page.tsx
client/src/app/users/: page.tsx
rust/: Cargo.toml  Makefile
script/: dev  start
(+1 files in other folders)
