[package]
name = "recommendations"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[test]]
name = "integration-tests"
path = "tests/lib.rs"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
axum-macros = "0.4.1"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower = { version = "0.4.13", features=["timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features=["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
